# 2DFrameStiffness

./: CMakeLists.txt  main.cpp
Excel/: ExcelTest.ods
includes/: comp.h  macros.h
src/: CMakeLists.txt  comp.cpp
